--- a/Blog.html
+++ b/Blog.html
@@ -8,6 +8,7 @@
 <meta name="description" content="Specialized fire safety solutions for the pharmaceutical industry by ML Consultancy in Hyderabad, ensuring compliance and safety.">
 <meta name="keywords" content="ML Consultancy, Pharmaceutical fire safety, Pharma safety systems, Fire protection in pharma, Hyderabad">
 <title>Pharmaceutical Fire Safety Solutions - ML Consultancy Hyderabad</title>
+	<link rel="canonical" href="https://mlcqehs.com/Blog.html">
 
 							
 		<!-- FAVICON AND TOUCH ICONS -->
