--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="Responsive, Digital Product">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/png" href="/images/vindus_clients_images/logo33.png">
-	<link rel="canonical" href="https://mlcqehs.com/">
+	<link rel="canonical" href="https://mlcqehs.com/index.html">
 
 				
   		<!-- SITE TITLE -->
