--- a/services2.html
+++ b/services2.html
@@ -525,7 +525,7 @@
       </div>
     
         <Main>
-            <section style="margin-top: 100px;">
+            <section >
 
                 <div class="container">
                     <div class="card mb-3">
