--- a/auditing.html
+++ b/auditing.html
@@ -466,7 +466,7 @@ li{
   </div>
 
 
-    <section class="container-fluid my-5 p-5 bg-custom rounded shadow-custom">
+    <section class="container-fluid  p-5 bg-custom rounded shadow-custom">
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div class="text-justify">
