--- a/safety.html
+++ b/safety.html
@@ -434,7 +434,7 @@ body {
     <h2 class="banner-heading">Safety Audit</h2>
   </div>	 
 
-<div class="container mt-5" style="text-align: justify;">
+<div class="container" style="text-align: justify;">
 	<div class="jumbotron bg-warning" style="background-image: url(images/vindus_clients_images/blue.jpg);" >
       <h1 class="display-4 text-center" style="color: white;font-weight: bold; ">MLC Safety Audits</h1>
       <p class="lead text-center" style="color: white;">Ensuring Safety and Compliance</p>
