--- a/ims.html
+++ b/ims.html
@@ -489,7 +489,7 @@ body {
     <h1 class="banner-heading">IMS Auditing</h1>
   </div>
 
-<div class="container mt-5">
+<div class="container ">
 	<div class="card mb-3">
 		
 	</div>
