--- a/incidentinvestigation.html
+++ b/incidentinvestigation.html
@@ -420,9 +420,9 @@ li{
 							  <li class="nl-simple" aria-haspopup="true"><a href="services2.html" class="h-link">Services&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="wsarrow"></span></a>
 							  
 										<ul class="sub-menu" id="services-menu" >
-											<li aria-haspopup="true"><a href="employeehs.html"> Employee Health Services</a></li>
+											<li aria-haspopup="true"><a href="employeehs.html"> Employee Health<br> Services</a></li>
 
-											<li aria-haspopup="true"><a href="Esg.html">ESG End to End Solution </a></li>
+											<li aria-haspopup="true"><a href="Esg.html">ESG End to<br> End Solution </a></li>
 											<li aria-haspopup="true"><a href="gmp.html">GMP Audit</a></li>
 											<li aria-haspopup="true"><a href="GMPQUALITYCONSULTING.html">GMP Quality Consulting</a></li>
 											<li aria-haspopup="true"><a href="hac.html">HAC Services</a></li>
