--- a/index.html
+++ b/index.html
@@ -695,6 +695,8 @@ overflow-y: scroll;
 
 
 </style>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7189560920705164"
+     crossorigin="anonymous"></script>
 	<meta name="google-site-verification" content="-ECINhQvyWuPbPMjYWEgrrAwC2ogJCJipBIp3ECVQe0" />
 	</head>
 
