--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="keywords" content="Responsive, Digital Product">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+	        <meta name="google-adsense-account" content="ca-pub-7189560920705164">
 		<link rel="icon" type="image/png" href="/images/vindus_clients_images/logo33.png">
 	<link rel="canonical" href="https://mlcqehs.com/index.html">
 
@@ -695,8 +696,7 @@ overflow-y: scroll;
 
 
 </style>
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7189560920705164"
-     crossorigin="anonymous"></script>
+	
 	<meta name="google-site-verification" content="-ECINhQvyWuPbPMjYWEgrrAwC2ogJCJipBIp3ECVQe0" />
 	</head>
 
