--- a/PLANTSETUPandUPGRADATION.html
+++ b/PLANTSETUPandUPGRADATION.html
@@ -860,8 +860,9 @@
                                 <li>
                                     <p><a href="terms.html">Terms of Use</a></p>
                                 </li>
-                                <!-- <li><p><a href="privacy.html">Privacy Policy</a></p></li>
-									<li><p><a href="cookies.html">Cookie Policy</a></p></li> -->
+                               <li>
+                            <p><a href="privacypolicy.html">Privacy Policy</a></p>
+                        </li>
                                 <li>
                                     <p><a href="sitemap.html">Site Map</a></p>
                                 </li>
