--- a/index.html
+++ b/index.html
@@ -1926,8 +1926,9 @@ var essb_settings = {"ajax_url":"https:\/\/jthemes.net\/themes\/wp\/martex\/wp-a
 								<!-- Links -->
 								<ul class="foo-links clearfix">
 									<li><p><a href="terms.html">Terms of Use</a></p></li>										
-									<!-- <li><p><a href="privacy.html">Privacy Policy</a></p></li>
-									<li><p><a href="cookies.html">Cookie Policy</a></p></li> -->
+									<li>
+                            <p><a href="privacypolicy.html">Privacy Policy</a></p>
+                        </li>
 									<li><p><a href="sitemap.html">Site Map</a></p></li>
 								</ul>
 
