--- a/services2.html
+++ b/services2.html
@@ -660,8 +660,9 @@
 								<!-- Links -->
 								<ul class="foo-links clearfix">
 									<li><p><a href="terms.html">Terms of Use</a></p></li>										
-									<!-- <li><p><a href="privacy.html">Privacy Policy</a></p></li>
-									<li><p><a href="cookies.html">Cookie Policy</a></p></li> -->
+									<li>
+                            <p><a href="privacypolicy.html">Privacy Policy</a></p>
+                        </li>
 									<li><p><a href="sitemap.html">Site Map</a></p></li>
 								</ul>
 
