--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@ a:hover
                            <h1 class="text-center">404</h1>
                        </div>
                        <div class="content_box_404">
-                           <h3 class="h2">Looks Like You're Lost</h3>
+                           <h3 class="h2">Looks Like You're Lost !!</h3>
                            <p>The page you are looking for not available</p>
                            <a href="index">Go to Home</a>
                        </div>
