css class remove

--- a/index.html
+++ b/index.html
@@ -885,9 +885,7 @@ overflow-y: scroll;
 
 				 	<!-- NAVIGATION MENU -->
 				  	<div class="wsmainfull menu clearfix" >
-	    				<div class="wsmainwp clearfix" >
-
-
+	    				<div class="clearfix" >
 	    					<!-- HEADER BLACK LOGO -->
 	    					<div class="desktoplogo" >
 	    						<a href="#" class="">
@@ -909,7 +907,15 @@ overflow-y: scroll;
 
 									<li class="nl-simple" aria-haspopup="true"><a href="index.html" class="h-link" >Home</a><span class="wsarrow"></span></li>
 
-
+									<li aria-haspopup="true"><a href="auditing.html" class="h-link">Statutory Compliance<span class="wsarrow"></span></a>
+										<ul id="auditing-sub-menu" class="sub-menu">
+											<li aria-haspopup="true"><a href="ims.html">IMS Auditing</a></li>
+											<li aria-haspopup="true"><a href="safety.html">Safety Audit</a></li>
+											<li aria-haspopup="true"><a href="env.html">Environment Audit</a></li>
+											<li aria-haspopup="true"><a href="healthandsafety.html">Healthy and safety Audit </a></li>
+											<li aria-haspopup="true"><a href="survelliance.html">Survelliance Audit</a></li>	
+										   </ul>
+									</li>
 								    <!-- SIMPLE NAVIGATION LINK -->
 									<li aria-haspopup="true"><a href="auditing.html" class="h-link">Auditing<span class="wsarrow"></span></a>
 										<ul id="auditing-sub-menu" class="sub-menu">
