header is fixed

--- a/ims.html
+++ b/ims.html
@@ -290,7 +290,7 @@ body {
 
 				 	<!-- NAVIGATION MENU -->
 				  	<div class="wsmainfull menu clearfix" >
-	    				<div class="wsmainwp clearfix" >
+	    				<div class="d-flex clearfix" >
 
 
 	    					<!-- HEADER BLACK LOGO -->
@@ -298,13 +298,6 @@ body {
 	    						<a href="#" class="">
 									<img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
 	    						</a>
-	    					</div>
-	    					
-
-	    					<!-- HEADER WHITE LOGO -->
-	    					<div class="desktoplogo">
-	    						<a href="#" class="logo-white">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
-								</a>
 	    					</div>
 
 
@@ -314,6 +307,15 @@ body {
 	
 										<li class="nl-simple" aria-haspopup="true"><a href="index.html" class="h-link">Home</a></li>
 	
+										<li aria-haspopup="true"><a href="auditing.html" class="h-link">Statutory Compliance<span class="wsarrow"></span></a>
+											<ul id="auditing-sub-menu" class="sub-menu">
+												<li aria-haspopup="true"><a href="ims.html">IMS Auditing</a></li>
+												<li aria-haspopup="true"><a href="safety.html">Safety Audit</a></li>
+												<li aria-haspopup="true"><a href="env.html">Environment Audit</a></li>
+												<li aria-haspopup="true"><a href="healthandsafety.html">Healthy and safety Audit </a></li>
+												<li aria-haspopup="true"><a href="survelliance.html">Survelliance Audit</a></li>	
+												</ul>
+										</li>
 	
 										<!-- SIMPLE NAVIGATION LINK -->
 										<li aria-haspopup="true"><a href="auditing.html" class="h-link">Auditing<span class="wsarrow"></span></a>
