--- a/ims.html
+++ b/ims.html
@@ -307,14 +307,67 @@ body {
 	
 										<li class="nl-simple" aria-haspopup="true"><a href="index.html" class="h-link">Home</a></li>
 	
-										<li aria-haspopup="true"><a href="auditing.html" class="h-link">Statutory Compliance<span class="wsarrow"></span></a>
-											<ul id="auditing-sub-menu" class="sub-menu">
-												<li aria-haspopup="true"><a href="ims.html">IMS Auditing</a></li>
-												<li aria-haspopup="true"><a href="safety.html">Safety Audit</a></li>
-												<li aria-haspopup="true"><a href="env.html">Environment Audit</a></li>
-												<li aria-haspopup="true"><a href="healthandsafety.html">Healthy and safety Audit </a></li>
-												<li aria-haspopup="true"><a href="survelliance.html">Survelliance Audit</a></li>	
-												</ul>
+										<li aria-haspopup="true">
+											<a href="" class="h-link">Statutory Compliance<span class="wsarrow"></span></a>
+											<ul class="sub-menu">
+												<li aria-haspopup="true">
+													<p class="para">Commercial Compliance <span class="wsarrow"></span></p>
+													<ul class="sub-menu">
+														<li aria-haspopup="true"><a href="#">Professional Tax</a></li>
+													</ul>
+												</li>
+												<li aria-haspopup="true">
+													<p class="para">Electrical Approvals<span class="wsarrow"></span></p>
+													<ul class="sub-menu">
+														<li aria-haspopup="true"><a href="">CEIG Approval</a></li>
+													</ul>
+												</li>
+												<li aria-haspopup="true">
+													<p class="para">Environmental Compliance<span class="wsarrow"></span></p>
+													<ul class="sub-menu" id="services-menu">
+														<li aria-haspopup="true"><a href="#">CFE</a></li>
+														<li aria-haspopup="true"><a href="">CFO</a></li>
+														<li aria-haspopup="true"><a href="">EMP</a></li>
+														<li aria-haspopup="true"><a href="">Environmental Clearance </a></li>
+														<li aria-haspopup="true"><a href="">Environmental Auditing</a></li>
+														<li aria-haspopup="true"><a href="">Environmental compliance monitoring</a></li>
+													</ul>
+												</li>
+												<li aria-haspopup="true">
+													<p class="para">Factory Compliance<span class="wsarrow"></span></p>
+													<ul class="sub-menu">
+														<li aria-haspopup="true"><a href="">Factory Licence</a></li>
+													</ul>
+												</li>
+												<li aria-haspopup="true">
+													<p class="para">Fire Compliance<span class="wsarrow"></span></p>
+													<ul class="sub-menu">
+														<li aria-haspopup="true"><a href="">Fire NOC</a></li>
+													</ul>
+												</li>
+												<li aria-haspopup="true">
+													<p class="para">Labor Compliance<span class="wsarrow"></span></p>
+													<ul class="sub-menu" id="services-menu">
+														<li aria-haspopup="true"><a href="">BOCW</a></li>
+														<li aria-haspopup="true"><a href="">CLRA</a></li>
+														<li aria-haspopup="true"><a href="">ISMW </a></li>
+														<li aria-haspopup="true"><a href="">LWF </a></li>
+													</ul>
+												</li>
+												<li aria-haspopup="true">
+													<p class="para">S&E Compliance<span class="wsarrow"></span></p>
+													<ul class="sub-menu">
+														<li aria-haspopup="true"><a href="">S&E Registration</a></li>
+													</ul>
+												</li>
+												<li aria-haspopup="true">
+													<p class="para">Vendor Auditing<span class="wsarrow"></span></p>
+													<ul class="sub-menu">
+														<li aria-haspopup="true"><a href="">Vendor Audit Guidelines</a></li>
+													</ul>
+												</li>
+		
+											</ul>
 										</li>
 	
 										<!-- SIMPLE NAVIGATION LINK -->
