--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
                 padding: 0;
                 float: right;
                 display: block;
+                margin-right: 39px;
             }
         }
         
