--- a/index.html
+++ b/index.html
@@ -687,6 +687,7 @@
             list-style: none;
             /* Optional: Remove default list style */
             height: 420px;
+            min-width: 20px;
         }
         
         .sub-menu li {
@@ -741,6 +742,16 @@
                 font-size: 16px;
                 /* Adjust font size if necessary */
             }
+        }
+        
+        .wsmenu>.wsmenu-list>li>ul.sub-menu {
+            width: auto;
+            min-width: 20px;
+            top: 62px;
+            padding: 12px 10px;
+            -webkit-border-radius: 6px;
+            -o-border-radius: 6px;
+            box-shadow: 0 2px 3px rgba(96, 96, 96, 0.1);
         }
     </style>
 
