--- a/ims.html
+++ b/ims.html
@@ -375,60 +375,59 @@
                                         <li aria-haspopup="true">
                                             <p class="para">Commercial Compliance <span class="wsarrow"></span></p>
                                             <ul class="sub-menu">
-                                                <li aria-haspopup="true"><a href="#">Professional Tax</a></li>
+                                                <li aria-haspopup="true"><a href="professionaltax.html">Professional Tax</a></li>
                                             </ul>
                                         </li>
                                         <li aria-haspopup="true">
                                             <p class="para">Electrical Approvals<span class="wsarrow"></span></p>
                                             <ul class="sub-menu">
-                                                <li aria-haspopup="true"><a href="">CEIG Approval</a></li>
+                                                <li aria-haspopup="true"><a href="ceigapproval.html">CEIG Approval</a></li>
                                             </ul>
                                         </li>
                                         <li aria-haspopup="true">
                                             <p class="para">Environmental Compliance<span class="wsarrow"></span></p>
                                             <ul class="sub-menu" id="services-menu">
-                                                <li aria-haspopup="true"><a href="#">CFE</a></li>
-                                                <li aria-haspopup="true"><a href="">CFO</a></li>
-                                                <li aria-haspopup="true"><a href="">EMP</a></li>
-                                                <li aria-haspopup="true"><a href="">Environmental Clearance </a></li>
-                                                <li aria-haspopup="true"><a href="">Environmental Auditing</a></li>
-                                                <li aria-haspopup="true"><a href="">Environmental compliance monitoring</a></li>
+                                                <li aria-haspopup="true"><a href="cfe.html">CFE</a></li>
+                                                <li aria-haspopup="true"><a href="cfo.html">CFO</a></li>
+                                                <li aria-haspopup="true"><a href="emp.html">EMP</a></li>
+                                                <li aria-haspopup="true"><a href="envclearance.html">Environmental Clearance </a></li>
+                                                <li aria-haspopup="true"><a href="enviauditing.html">Environmental Auditing</a></li>
+                                                <li aria-haspopup="true"><a href="envcompliancemonitoring.html">Environmental compliance monitoring</a></li>
                                             </ul>
                                         </li>
                                         <li aria-haspopup="true">
                                             <p class="para">Factory Compliance<span class="wsarrow"></span></p>
                                             <ul class="sub-menu">
-                                                <li aria-haspopup="true"><a href="">Factory Licence</a></li>
+                                                <li aria-haspopup="true"><a href="factorylicence.html">Factory Licence</a></li>
                                             </ul>
                                         </li>
                                         <li aria-haspopup="true">
                                             <p class="para">Fire Compliance<span class="wsarrow"></span></p>
                                             <ul class="sub-menu">
-                                                <li aria-haspopup="true"><a href="">Fire NOC</a></li>
+                                                <li aria-haspopup="true"><a href="firenoc.html">Fire NOC</a></li>
                                             </ul>
                                         </li>
                                         <li aria-haspopup="true">
                                             <p class="para">Labor Compliance<span class="wsarrow"></span></p>
                                             <ul class="sub-menu" id="services-menu">
-                                                <li aria-haspopup="true"><a href="">BOCW</a></li>
-                                                <li aria-haspopup="true"><a href="">CLRA</a></li>
-                                                <li aria-haspopup="true"><a href="">ISMW </a></li>
-                                                <li aria-haspopup="true"><a href="">LWF </a></li>
+                                                <li aria-haspopup="true"><a href="bocw.html">BOCW</a></li>
+                                                <li aria-haspopup="true"><a href="clra.html">CLRA</a></li>
+                                                <li aria-haspopup="true"><a href="ismw.html">ISMW </a></li>
+                                                <li aria-haspopup="true"><a href="lwf.html">LWF </a></li>
                                             </ul>
                                         </li>
                                         <li aria-haspopup="true">
                                             <p class="para">S&E Compliance<span class="wsarrow"></span></p>
                                             <ul class="sub-menu">
-                                                <li aria-haspopup="true"><a href="">S&E Registration</a></li>
+                                                <li aria-haspopup="true"><a href="s&eregistration.html">S&E Registration</a></li>
                                             </ul>
                                         </li>
                                         <li aria-haspopup="true">
                                             <p class="para">Vendor Auditing<span class="wsarrow"></span></p>
                                             <ul class="sub-menu">
-                                                <li aria-haspopup="true"><a href="">Vendor Audit Guidelines</a></li>
+                                                <li aria-haspopup="true"><a href="vendorauditguidelines.html">Vendor Audit Guidelines</a></li>
                                             </ul>
                                         </li>
-
                                     </ul>
                                 </li>
 
