--- a/cfe.html
+++ b/cfe.html
@@ -525,7 +525,7 @@
             <section class="mb-4">
                 <h2 class="section-title text-center">Validity of Consent for Establishment (CFE)</h2>
                 <table class="table table-bordered">
-                    <thead class="thead-dark">
+                    <thead >
                         <tr>
                             <th>Category of Industry/Project</th>
                             <th>Validity Period</th>
@@ -578,7 +578,8 @@
             </section>
     
             <section>
-                <h2>FAQ</h2>
+                <h2 style="color: #1560bd;">FAQ</h2>
+                <br>
                 <div class="accordion" id="faqAccordion">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
