--- a/firenoc.html
+++ b/firenoc.html
@@ -327,7 +327,7 @@
                         <!-- HEADER BLACK LOGO -->
                         <div class="desktoplogo">
                             <a href="#" class="">
-                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
+                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px" id="mlc-logo">
                             </a>
                         </div>
 
