--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 	
 		<!-- ON SCROLL ANIMATION -->
 		<link href="css/animate.css" rel="stylesheet">
+		
 
 		<!-- TEMPLATE CSS -->
 		<link href="css/blue-theme.css" rel="stylesheet">
@@ -356,9 +357,9 @@
     padding: 0;
     float: right;
     display: block;
-    margin-right: 39px;
   }
 }
+
 
 @media (max-width: 768px) {
     #brands-1 {
@@ -694,8 +695,9 @@ overflow-y: scroll;
     font-size: 16px; /* Adjust font size if necessary */
   }
 }
-
-
+.wsmenu .wsmenu-list a {
+    font-size: 14px; 
+  }
 </style>
 	
 	<meta name="google-site-verification" content="-ECINhQvyWuPbPMjYWEgrrAwC2ogJCJipBIp3ECVQe0" />
@@ -868,7 +870,7 @@ overflow-y: scroll;
 				</div>
 				<!-- NAVIGATION MENU -->
 				<div class="wsmainfull menu clearfix" >
-					<div class="clearfix" >
+					<div class="clearfix d-flex" >
 						<!-- HEADER BLACK LOGO -->
 						<div class="desktoplogo" >
 							<a href="#" class="">
