--- a/factorylicence.html
+++ b/factorylicence.html
@@ -607,7 +607,7 @@
                 <img src="images/vindus_clients_images/fl6.webp" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/fl8.png" alt="Banner Image 2">
                 <img src="images/vindus_clients_images/fl9.jpg" alt="Banner Image 1">
-                <img src="images/vindus_clients_images/fl10.webp" alt="Banner Image 2">
+                <img src="images/vindus_clients_images/fl10.png" alt="Banner Image 2">
                 <!-- Duplicate set of images for continuous scroll -->
                 <img src="images/vindus_clients_images/fl1.jpg" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/fl2.webp" alt="Banner Image 2">
@@ -615,7 +615,7 @@
                 <img src="images/vindus_clients_images/fl6.webp" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/fl8.png" alt="Banner Image 2">
                 <img src="images/vindus_clients_images/fl9.jpg" alt="Banner Image 1">
-                <img src="images/vindus_clients_images/fl10.webp" alt="Banner Image 2">
+                <img src="images/vindus_clients_images/fl10.png" alt="Banner Image 2">
             </div>
             <h1 class="banner-heading">Factory Licence</h1>
         </div>
@@ -704,7 +704,7 @@
 
             <div class="image-container">
                 <img src="images/vindus_clients_images/fl3.png" alt="Image 1">
-                <img src="images/vindus_clients_images/fl5.webp" alt="Image 2">
+                <img src="images/vindus_clients_images/fls.jpg" alt="Image 2">
                 <img src="images/vindus_clients_images/fl7.jpg" alt="Image 3">
             </div>
 
