--- a/firenoc.html
+++ b/firenoc.html
@@ -556,17 +556,17 @@
 
         <div class="banner">
             <div class="banner-images">
-                <img src="images/vindus_clients_images/fn1.jpg" alt="Banner Image 1">
+                <img src="images/vindus_clients_images/firenoc.webp" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/fn2.webp" alt="Banner Image 2">
                 <img src="images/vindus_clients_images/fn3.png" alt="Banner Image 3">
                 <img src="images/vindus_clients_images/fn4.jpg" alt="Banner Image 1">
-                <img src="images/vindus_clients_images/fn5.webp" alt="Banner Image 2">
+                <img src="images/vindus_clients_images/fn5.png" alt="Banner Image 2">
                 <!-- Duplicate set of images for continuous scroll -->
-                <img src="images/vindus_clients_images/fn1.jpg" alt="Banner Image 1">
+                <img src="images/vindus_clients_images/firenoc.webp" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/fn2.webp" alt="Banner Image 2">
                 <img src="images/vindus_clients_images/fn3.png" alt="Banner Image 3">
                 <img src="images/vindus_clients_images/fn4.jpg" alt="Banner Image 1">
-                <img src="images/vindus_clients_images/fn5.webp" alt="Banner Image 2">
+                <img src="images/vindus_clients_images/fn5.png" alt="Banner Image 2">
             </div>
             <h1 class="banner-heading">Fire Noc</h1>
         </div>
