--- a/s&eregistration.html
+++ b/s&eregistration.html
@@ -515,15 +515,15 @@
 
         <div class="banner">
             <div class="banner-images">
-                <img src="images/vindus_clients_images/se1.png" alt="Banner Image 1">
+                <img src="images/vindus_clients_images/s&e1.jpg" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/se2.jpg" alt="Banner Image 2">
-                <img src="images/vindus_clients_images/se3.png" alt="Banner Image 3">
+                <img src="images/vindus_clients_images/s&e.png" alt="Banner Image 3">
                 <img src="images/vindus_clients_images/se4.jpg" alt="Banner Image 1">
 
                 <!-- Duplicate set of images for continuous scroll -->
-                <img src="images/vindus_clients_images/se1.png" alt="Banner Image 1">
+                <img src="images/vindus_clients_images/s&e1.jpg" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/se2.jpg" alt="Banner Image 2">
-                <img src="images/vindus_clients_images/se3.png" alt="Banner Image 3">
+                <img src="images/vindus_clients_images/s&e.png" alt="Banner Image 3">
                 <img src="images/vindus_clients_images/se4.jpg" alt="Banner Image 1">
             </div>
             <h1 class="banner-heading">S&E Registration</h1>
