--- a/professionaltax.html
+++ b/professionaltax.html
@@ -518,7 +518,7 @@
                 <img src="images/vindus_clients_images/pt1.png" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/PT.png" alt="Banner Image 2">
                 <img src="images/vindus_clients_images/pt2.png" alt="Banner Image 3">
-                <img src="images/vindus_clients_images/Professional-Tax-Registration.jpg" alt="Banner Image 1">
+                <img src="images/vindus_clients_images/Professional-Tax-Registration.jpg" alt="Banner Image">
                 <img src="images/vindus_clients_images/pt3.png" alt="Banner Image 2">
                 <!-- Duplicate set of images for continuous scroll -->
                 <img src="images/vindus_clients_images/pt1.png" alt="Banner Image 1">
