--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,8 @@ overflow-y: scroll;
 
 										<li aria-haspopup="true"><a href="safetystudies.html">Safety Studies </a></li>
 										<li aria-haspopup="true"><a href="supplierqualificationaudit.html">Supplier qualification Audit</a></li>
+										<li aria-haspopup="true"><a href="developmentservice.html">Development Services</a></li>
+
 										
 									</ul>
 								</li>
