--- a/about.html
+++ b/about.html
@@ -574,6 +574,8 @@ span{
 	
 											<li aria-haspopup="true"><a href="safetystudies.html">Safety Studies </a></li>
 											<li aria-haspopup="true"><a href="supplierqualificationaudit.html">Supplier qualification Audit</a></li>
+											<li aria-haspopup="true"><a href="developmentservice.html">Development Services</a></li>
+
 	
 										</ul>
 									</li>
