Images changes done

--- a/envclearance.html
+++ b/envclearance.html
@@ -465,15 +465,15 @@
         <body>
             <div class="banner">
                 <div class="banner-images">
-                    <img src="images/vindus_clients_images/What_is_Environmental_Clearance.jpg" alt="Banner Image 4">
-                    <img src="images/vindus_clients_images/Environmental-Clearance-Perfect-Pollucon-Services.jpg" alt="Banner Image 1">
-                    <img src="images/vindus_clients_images/environmental-clearance-service.jpg" alt="Banner Image 2">
+                    <img src="images/vindus_clients_images/env-clearance.png" alt="Banner Image 4">
+                    <img src="images/vindus_clients_images/Environmental-Clearance-Perfect-Pollucon-Services.png" alt="Banner Image 1">
+                    <img src="images/vindus_clients_images/environmental-clearance-service.png" alt="Banner Image 2">
                     <img src="images/vindus_clients_images/environmental-clearance-services.jpg" alt="Banner Image 5">
                     <img src="images/vindus_clients_images/Environmental-Clearance-Process-in-India.png" alt="Banner Image 3">
                     <!-- Duplicate set of images for continuous scroll -->
-                    <img src="images/vindus_clients_images/What_is_Environmental_Clearance.jpg" alt="Banner Image 4">
-                    <img src="images/vindus_clients_images/Environmental-Clearance-Perfect-Pollucon-Services.jpg" alt="Banner Image 1">
-                    <img src="images/vindus_clients_images/environmental-clearance-service.jpg" alt="Banner Image 2">
+                    <img src="images/vindus_clients_images/env-clearance.png" alt="Banner Image 4">
+                    <img src="images/vindus_clients_images/Environmental-Clearance-Perfect-Pollucon-Services.png" alt="Banner Image 1">
+                    <img src="images/vindus_clients_images/environmental-clearance-service.png" alt="Banner Image 2">
                     <img src="images/vindus_clients_images/environmental-clearance-services.jpg" alt="Banner Image 5">
                     <img src="images/vindus_clients_images/Environmental-Clearance-Process-in-India.png" alt="Banner Image 3">
                 </div>
