--- a/cfo.html
+++ b/cfo.html
@@ -444,7 +444,7 @@
         <body>
             <div class="banner">
                 <div class="banner-images">
-                    <img src="images/vindus_clients_images/Consent-for-Operation.jpg" alt="Banner Image 1">
+                    <img src="images/vindus_clients_images/Consent-for-Operation.png" alt="Banner Image 1">
                 </div>
                 <h1 class="banner-heading">Consent for Operation (CFO)</h1>
             </div>
