--- a/firenoc.html
+++ b/firenoc.html
@@ -530,6 +530,8 @@
 
                                         <li aria-haspopup="true"><a href="safetystudies.html">Safety Studies </a></li>
                                         <li aria-haspopup="true"><a href="supplierqualificationaudit.html">Supplier qualification Audit</a></li>
+                                        <li aria-haspopup="true"><a href="developmentservice.html">Development Services</a></li>
+
 
                                     </ul>
                                 </li>
