blur images changed

--- a/cfe.html
+++ b/cfe.html
@@ -476,6 +476,9 @@
                 <img src="images/vindus_clients_images/Consent-to-Operate-vs-Consent-to-Establish-from-Pollution-Control-Board.png" alt="Banner Image 1">
                 <img src="images/vindus_clients_images/images_6.jpg" alt="Banner Image 2">
                 <img src="images/vindus_clients_images/mpcb-services.png" alt="Banner Image 3">
+                <img src="images/vindus_clients_images/Consent-to-Operate-vs-Consent-to-Establish-from-Pollution-Control-Board.png" alt="Banner Image 1">
+                <img src="images/vindus_clients_images/images_6.jpg" alt="Banner Image 2">
+                <img src="images/vindus_clients_images/mpcb-services.png" alt="Banner Image 3">
             </div>
             <h1 class="banner-heading">Consent for Establishment (CFE)</h1>
         </div>
