--- a/index.html
+++ b/index.html
@@ -652,7 +652,10 @@ overflow-y: scroll;
 	height: 420px;
 	overflow-y: scroll;
 }
-
+#services-menu {
+            height: 420px;
+            overflow-y: scroll;
+        }
 #auditing-sub-menu li a,
         #certification-sub-menu li a,
         #iso-sub-menu li a,
@@ -697,6 +700,14 @@ overflow-y: scroll;
 .wsmenu .wsmenu-list a {
     font-size: 14px; 
   }
+  #services-sub-menu {
+            overflow-y: scroll;
+            padding-left: 0;
+            margin: 0;
+            list-style: none;
+            height: 420px;
+            min-width: 20px;
+        }
 </style>
 	
 	<meta name="google-site-verification" content="-ECINhQvyWuPbPMjYWEgrrAwC2ogJCJipBIp3ECVQe0" />
@@ -1050,6 +1061,8 @@ overflow-y: scroll;
 	
 											<li aria-haspopup="true"><a href="safetystudies.html">Safety Studies </a></li>
 											<li aria-haspopup="true"><a href="supplierqualificationaudit.html">Supplier qualification Audit</a></li>
+											<li aria-haspopup="true"><a href="developmentservice.html">Development Services</a></li>
+
 	
 										</ul>
 									</li>
