--- a/emp.html
+++ b/emp.html
@@ -474,6 +474,9 @@
                     <img src="images/vindus_clients_images/EmP.jpg" alt="Banner Image 1">
                     <img src="images/vindus_clients_images/1639822592705.jpg" alt="Banner Image 2">
                     <img src="images/vindus_clients_images/env-management.png" alt="Banner Image 3">
+                    <img src="images/vindus_clients_images/EmP.jpg" alt="Banner Image 1">
+                    <img src="images/vindus_clients_images/1639822592705.jpg" alt="Banner Image 2">
+                    <img src="images/vindus_clients_images/env-management.png" alt="Banner Image 3">
                 </div>
                 <h1 class="banner-heading">Environment Management Plan (EMP)</h1>
             </div>
